[project]
name = "liv_datasets"
version = "0.0.1"
authors = [
  { name="Liv Gorton", email="liv@livgorton.com" },
]
description = "Datasets and related classes for personal projects."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/liv0617/datasets"
Issues = "https://github.com/liv0617/datasets/issues"

[build-system]
requires = ["hatchling", "torch"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/liv_datasets"]